--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="https://code.jquery.com/pep/0.4.1/pep.js"></script>
 
     <script src="constants.js" defer></script>
+    <script src="menu-content.js" defer></script>
     <script src="flashcard.js" defer></script>
     <script src="flashcard-screen.js" defer></script>
     <script src="menu-screen.js" defer></script>
